...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HelpHead"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/HelpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/HelpText"
...
