...
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kontakt hinzufügen" />

    <LinearLayout
        android:id="@+id/button_search_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">



        <ImageButton
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <LinearLayout
            android:id="@+id/search_contact_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
...
